--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!doctype html>
 <html lang="es">
   <head>
-<<<<<<< HEAD
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link rel="stylesheet" type="text/css" href="./css/Carrusel.css">
-=======
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
-
->>>>>>> iara
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -59,11 +54,11 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/MilkaNegro.png" class="product-thumb" alt="">
+                        <img src="./Productos/imgbebi/aquariusmanz.webp class="product-thumb" alt="">
                         <button class="card-btn">Añadir Al Carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand"> Milka Negro</h2>
+                        <h2 class="product-brand"> Aquarius Manzana</h2>
                         <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$1200</span>
                     </div>
@@ -71,11 +66,11 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/oreo.webp" class="product-thumb" alt="">
+                        <img src="./Productos/imggol/alfamilka.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand"> Oreo</h2>
+                        <h2 class="product-brand"> Alfajor Milka</h2>
                         <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
@@ -83,11 +78,11 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/MilkaTriple.webp" class="product-thumb" alt="">
+                        <img src="./Productos/imgsnack/laysjamon.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand"> Milka Triple</h2>
+                        <h2 class="product-brand"> Lays Jamon Serrano</h2>
                         <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
@@ -95,11 +90,11 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/pepitos.webp" class="product-thumb" alt="">
+                        <img src="./Productos/imggol/alfapepitos.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand"> Pepitos</h2>
+                        <h2 class="product-brand"> Alfajor Pepitos</h2>
                         <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
@@ -107,11 +102,11 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/aquaman.webp" class="product-thumb" alt="">
+                        <img src="./Productos/imggol/barrakitkat.png" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
-                        <h2 class="product-brand">Aquarius Manzana</h2>
+                        <h2 class="product-brand">KitKat</h2>
                         <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
@@ -119,23 +114,23 @@
                 <div class="product-card">
                     <div class="product-image">
                         <span class="discount-tag"></span>
-                        <img src="./imagenes/kitkat.webp" class="product-thumb" alt="">
-                        <button class="card-btn">Añadir al carrito</button>
-                    </div>
-                    <div class="product-info">
-                        <h2 class="product-brand">Chocolate Kitkat</h2>
-                        <p class="product-short-description">Descripcion</p>
-                        <span class="price">$20</span><span class="actual-price">$40</span>
-                    </div>
-                </div>
-                <div class="product-card">
-                    <div class="product-image">
-                        <span class="discount-tag"></span>
-                        <img src="./imagenes/MiniOreo.webp" class="product-thumb" alt="">
+                        <img src="./Productos/imggol/gallesoreo.webp" class="product-thumb" alt="">
                         <button class="card-btn">Añadir al carrito</button>
                     </div>
                     <div class="product-info">
                         <h2 class="product-brand">Galletitas Oreo</h2>
+                        <p class="product-short-description">Descripcion</p>
+                        <span class="price">$20</span><span class="actual-price">$40</span>
+                    </div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <span class="discount-tag"></span>
+                        <img src="./Productos/imggol/galleterrabusi.webp" class="product-thumb" alt="">
+                        <button class="card-btn">Añadir al carrito</button>
+                    </div>
+                    <div class="product-info">
+                        <h2 class="product-brand">Galletitas Terrabusi</h2>
                         <p class="product-short-description">Descripcion</p>
                         <span class="price">$20</span><span class="actual-price">$40</span>
                     </div>
