--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -38,49 +38,43 @@
     <main>
         <section class="product-container" id="content">
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 1">
+                <img src="./imggol/alfamilka.webp" alt="Producto 1">
                 <h3>Producto 1</h3>
                 <p>$10.00</p>
                 <button class="add-to-cart">Agregar al Carrito</button>
             </div>
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 2">
+                <img src="imggol/alfaoreo.webp" alt="Producto 2">
                 <h3>Producto 2</h3>
                 <p>$15.00</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 3">
+                <img src="imggol/alfaoreomilka.webp" alt="Producto 3">
                 <h3>Producto 3</h3>
                 <p>$20.00</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
-                <h3>Producto 4</h3>
-                <p>$25.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
+                <img src="imggol/barrakitkat.png" alt="Producto 4">
                 <h3>Producto 5</h3>
                 <p>$25.00</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
+                <img src="imggol/gallesoreo.webp" alt="Producto 4">
                 <h3>Producto 5</h3>
                 <p>$25.00</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
+                <img src="imggol/galleterrabusi.webp" alt="Producto 4">
                 <h3>Producto 5</h3>
                 <p>$25.00</p>
                 <button>Agregar al Carrito</button>
             </div>
             <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
+                <img src="imggol/minirhodesia.webp" alt="Producto 4">
                 <h3>Producto 5</h3>
                 <p>$25.00</p>
                 <button>Agregar al Carrito</button>
