arreglos en las paginas de produtos

--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
             <label  for=""> <i class="fas fa-bars filtro"></i></label>
           </button>
           <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Productos</a></li>
-            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Another action</a></li>
-            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Something </a></li>
-            <li><a style="color: #397f3e;" class="dropdown-item" href="#">Something </a></li>
+            <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>   
+            <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
+            <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
           
 
           </ul>
