--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos a la Venta</title>
-    <link rel="stylesheet" href="./productos.css">
+    <link rel="stylesheet" href="/Productos/productos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="js/jquery.dataTables.min.js"></script>
@@ -18,15 +18,15 @@
               <label  for=""> <i class="fas fa-bars filtro"></i></label>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li><a style="color: #397f3e;" class="dropdown-item" href="#">Bebidas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="#">Golosinas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="#">Snacks</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>
             </ul>
           </div>
   
-        <div id="searchContainer">
+        <div >
             <form action="">
-              <input  type="text" id="searchInput" placeholder="Buscar..." oninput="showSuggestions()">
+              <input  type="text"placeholder="BUSCAR">
               <button class="boton" type="submit"><i class="fa fa-search lupa"></i></button>
             </form>
             <div id="suggestion" class="hidden" ></div>
