--- a/Productos/golosinas.html
+++ b/Productos/golosinas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos a la Venta</title>
-    <link rel="stylesheet" href="./productos.css">
+    <link rel="stylesheet" href="/Productos/productos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="js/jquery.dataTables.min.js"></script>
@@ -18,15 +18,15 @@
               <label  for=""> <i class="fas fa-bars filtro"></i></label>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li><a style="color: #397f3e;" class="dropdown-item" href="#">Bebidas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="#">Golosinas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="#">Snacks</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>
             </ul>
           </div>
   
-        <div id="searchContainer">
+        <div>
             <form action="">
-              <input  type="text" id="searchInput" placeholder="Buscar..." oninput="showSuggestions()">
+              <input  type="text" placeholder="BUSCAR">
               <button class="boton" type="submit"><i class="fa fa-search lupa"></i></button>
             </form>
             <div id="suggestion" class="hidden" ></div>
@@ -82,80 +82,7 @@
         </section>
     </main>
     <script>        
-        const searchInput = document.getElementById('searchInput');
-        const suggestionsDiv = document.getElementById('suggestions');
-        const content = document.getElementById('content');
-        const paragraphs = Array.from(content.getElementsByTagName('p'));
-
-        // Lista de términos de ejemplo para sugerencias
-        const suggestions = [
-            "HTML", "JavaScript", "CSS", "programación", "sitios web", "buscador", "sugerencias"
-        ];
-
-        // Mostrar sugerencias
-        function showSuggestions() {
-            const input = searchInput.value.toLowerCase();
-            suggestionsDiv.innerHTML = '';
-
-            if (input === '') {
-                suggestionsDiv.classList.add('hidden');
-                return;
-            }
-
-            const filteredSuggestions = suggestions.filter(suggestion =>
-                suggestion.toLowerCase().includes(input)
-            );
-
-            if (filteredSuggestions.length > 0) {
-                suggestionsDiv.classList.remove('hidden');
-                filteredSuggestions.forEach(suggestion => {
-                    const div = document.createElement('div');
-                    div.classList.add('suggestion-item');
-                    div.innerHTML = highlightMatch(suggestion, input);
-                    div.onclick = function() {
-                        searchInput.value = suggestion;
-                        search();
-                        suggestionsDiv.classList.add('hidden');
-                    };
-                    suggestionsDiv.appendChild(div);
-                });
-            } else {
-                suggestionsDiv.classList.add('hidden');
-            }
-        }
-
-        // Resaltar coincidencias
-        function highlightMatch(text, query) {
-            const index = text.toLowerCase().indexOf(query.toLowerCase());
-            if (index !== -1) {
-                return text.substring(0, index) +
-                       "<span class='highlight'>" + text.substring(index, index + query.length) + "</span>" +
-                       text.substring(index + query.length);
-            }
-            return text;
-        }
-
-        // Buscar en el contenido
-        function search() {
-            const input = searchInput.value.toLowerCase();
-            paragraphs.forEach(paragraph => {
-                const text = paragraph.textContent.toLowerCase();
-                if (text.includes(input)) {
-                    const originalText = paragraph.textContent;
-                    const highlightedText = highlightMatch(originalText, input);
-                    paragraph.innerHTML = highlightedText;
-                } else {
-                    paragraph.innerHTML = paragraph.textContent;
-                }
-            });
-        }
-
-        // Limpiar el resaltado y las sugerencias al hacer clic fuera del área de sugerencias
-        document.addEventListener('click', function(event) {
-            if (!document.getElementById('searchContainer').contains(event.target)) {
-                suggestionsDiv.classList.add('hidden');
-            }
-        });
+       
         </script>
         <!--
          // Función para agregar producto al localStorage
