--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/bebidas.html">Bebidas</a></li>
             <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/golosinas.html">Golosinas</a></li>
             <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/snack.html">Snacks</a></li>
+            <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/galle.html">Galletitas</a></li>
           </ul>
         </div>
 
