--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                   <div class="footer-menu">
                       <ul>
                           <li><a href="#">Home</a></li>
-                          <li><a href="#">Terms</a></li>
+                          <li><a href="/faq/faq.html">FaQ</a></li>
                           <li><a href="#">Privacy</a></li>
                           <li><a href="#">Policy</a></li>
                           <li><a href="#">Contact</a></li>
