--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="/Productos/productos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="js/jquery.dataTables.min.js"></script>
-    <script src="js/jquery.js"></script>
+    <!--script src="js/jquery.dataTables.min.js"></script-->
+    <!--script src="js/jquery.js"></script-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="../JS/bebids.js"></script>
 </head>
 <body>
     <header>
@@ -36,8 +37,8 @@
     </header>
     
     <main>
-        <section class="product-container" id="content">
-            <div class="product">
+        <section class="product-container" id="miLista">
+            <!--div class="product">
                 <img src="./imggol/alfamilka.webp" alt="Producto 1">
                 <h3>Producto 1</h3>
                 <p>$10.00</p>
@@ -78,14 +79,14 @@
                 <h3>Producto 5</h3>
                 <p>$25.00</p>
                 <button>Agregar al Carrito</button>
-            </div>
+            </div-->
         </section>
     </main>
     <script>        
         const searchInput = document.getElementById('searchInput');
         const suggestionsDiv = document.getElementById('suggestions');
         const content = document.getElementById('content');
-        const paragraphs = Array.from(content.getElementsByTagName('p'));
+        //const paragraphs = Array.from(content.getElementsByTagName('p'));
 
         // Lista de términos de ejemplo para sugerencias
         const suggestions = [
