--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
         </div>
         <script src="./JS/script.js"></script>
 <!-- footer -->
-      <div class="footer-content pt-5 pb-5">
+      <div class="footer-content">
     <div class="copyright-area">
       <div class="container">
           <div class="row">
@@ -322,8 +322,8 @@
               <div class="col-xl-6 col-lg-6 d-none d-lg-block text-right">
                   <div class="footer-menu">
                       <ul>
-                          <li><a href="#">Home</a></li>
-                          <li><a href="/faq/faq.html">FaQ</a></li>
+                          <li><a href="./index.html">Home</a></li>
+                          <li><a href="/faq/faq.html">FAQ</a></li>
                           <li><a href="#">Privacy</a></li>
                           <li><a href="#">Policy</a></li>
                           <li><a href="#">Contact</a></li>
