cambios en preguntas frecuentes

--- a/carrito.html
+++ b/carrito.html
@@ -14,7 +14,7 @@
     <header>
         <a href="index.html" ><button class="boton"><i class="fa fa-arrow-left" aria-hidden="true"></i>
         </button></a>
-        <h1>Carrito de Compras</h1>
+        <h1 style="margin-right: 5%;">Carrito de Compras</h1>
         <div></div>
     </header>
     
