--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
         </div>
         <script src="./JS/script.js"></script>
 <!-- footer -->
-      <div class="footer-content pt-5 pb-5">
+ <footer>
+      <div class="footer-content">
     <div class="copyright-area">
       <div class="container">
           <div class="row">
