--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
                   <div class="footer-menu">
                       <ul>
                           <li><a href="./index.html">Home</a></li>
-                          <li><a href="/faq/faq.html">FAQ</a></li>
+                          <li><a href="./faq/faq.html">FAQ</a></li>
                           <li><a href="#">Privacy</a></li>
                           <li><a href="#">Policy</a></li>
-                          <li><a href="#">Contact</a></li>
+                          <li><a href="./contacto.html">Contacto</a></li>
                       </ul>
                   </div>
               </div>
