--- a/Productos/snack.html
+++ b/Productos/snack.html
@@ -36,55 +36,8 @@
     </header>
     
     <main>
-        <section class="product-container" id="content">
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 1">
-                <h3>Producto 1</h3>
-                <p>$10.00</p>
-                <button class="add-to-cart">Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 2">
-                <h3>Producto 2</h3>
-                <p>$15.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 3">
-                <h3>Producto 3</h3>
-                <p>$20.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
-                <h3>Producto 4</h3>
-                <p>$25.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
-                <h3>Producto 5</h3>
-                <p>$25.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
-                <h3>Producto 5</h3>
-                <p>$25.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
-                <h3>Producto 5</h3>
-                <p>$25.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/200x200" alt="Producto 4">
-                <h3>Producto 5</h3>
-                <p>$25.00</p>
-                <button>Agregar al Carrito</button>
-            </div>
+        <section class="product-container" id="miLista">
+
         </section>
     </main>
     <script>        
@@ -188,6 +141,8 @@
              button.addEventListener('click', addProductToCart);
          }); 
          ¡-->
-         
+         <!--conectar el js -->
+        <script src="../JS/snacks.js"></script>
+
 </body>
 </html>
