--- a/faq/faq.html
+++ b/faq/faq.html
@@ -73,7 +73,7 @@
 				</div>
 				<div class="contenedor-pregunta">
 					<p class="pregunta">¿En que horarios puedo reservar?<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
-					<p class="respuesta">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum laborum porro voluptates, sequi aliquam mollitia! Nostrum eius iure sapiente, voluptates soluta adipisci, perferendis voluptatibus eligendi vel saepe harum. Consectetur, doloribus.adipisicing elit. Voluptatum laborum porro voluptates, sequi aliquam mollitia! Nostrum eius iure sapiente, voluptates soluta adipisci, perferendis voluptatibus eligendi vel saepe harum. Consectetur, doloribus.</p>
+					<p class="respuesta"></p>
 				</div>
 			</div>
 
