--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
   </head>
   <body>
 
@@ -22,8 +21,8 @@
           <button style="background: #397f3e;" class="btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
             <label  for=""> <i class="fas fa-bars filtro"></i></label>
           </button>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-            <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>   
+          <ul  class="dropdown-menu " aria-labelledby="dropdownMenuButton1">
+            <li class="li"><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>   
             <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
             <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
           
@@ -321,7 +320,7 @@
                   <div class="footer-menu">
                       <ul>
                           <li><a href="#">Home</a></li>
-                          <li><a href="/faq/faq.html">FaQ</a></li>
+                          <li><a href="/faq/faq.html">FAQ</a></li>
                           <li><a href="#">Privacy</a></li>
                           <li><a href="#">Policy</a></li>
                           <li><a href="#">Contact</a></li>
