--- a/Productos/galletitas.html
+++ b/Productos/galletitas.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -69,6 +68,6 @@
              button.addEventListener('click', addProductToCart);
          }); 
          ¡-->
-        <script src="../JS/golosinas.js"></script>
+        <script src="../JS/galletitas.js"></script>
 </body>
 </html>
