--- a/faq/faq.html
+++ b/faq/faq.html
@@ -56,8 +56,15 @@
 			<!-- Preguntas Entregas -->
 			<div class="contenedor-preguntas" data-categoria="entregas">
 				<div class="contenedor-pregunta">
-					<p class="pregunta">¿Que pasa si hice una compra y no la pude retirar? <img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
-					<p class="respuesta">Es caso de ser así, puede acercarse a hablar con cualquiera de los encargados del kiosco y resolver el problema</p>
+					<p class="pregunta">¿En que momento puedo retirar mi compra? <img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
+					<p class="respuesta">	<li class="respuesta">Lo podes retirar durante los recreos</li>
+						<li class="respuesta">8:45 - 8:55</li>
+						<li class="respuesta">9:55 - 10:05</li>
+						<li class="respuesta">11:05 - 11:15</li>
+						<li class="respuesta">14:00 - 14:10</li>
+						<li class="respuesta">15:10 - 15:20</li>
+						<li class="respuesta">16:20 - 16:30</li>
+					</p>
 				</div>
 				<div class="contenedor-pregunta">
 					<p class="pregunta">¿Trabajan con envíos? <img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
@@ -73,7 +80,7 @@
 				</div>
 				<div class="contenedor-pregunta">
 					<p class="pregunta">¿En que horarios puedo reservar?<img src="./img/suma.svg" alt="Abrir Respuesta" /></p>
-					<p class="respuesta"></p>
+					<p class="respuesta">Podes reservar en cualquier momento de la mañana y tarde (7:45 - 12:15 y 13:00 - 17:25)</p>
 				</div>
 			</div>
 
