--- a/contacto.html
+++ b/contacto.html
@@ -49,7 +49,7 @@
 <section class="contact-page-section">
     <div class="container">
         <div class="sec-title">
-            <div class="title">Contact Us</div>
+            <div class="title">Contactanos</div>
               <h2>Let's Get in Touch.</h2>
           </div>
           <div class="inner-container">
@@ -64,22 +64,16 @@
                               <form method="post" action="sendemail.php" id="contact-form">
                                   <div class="row clearfix">
                                       <div class="form-group col-md-6 col-sm-6 co-xs-12">
-                                          <input type="text" name="name" value="" placeholder="Name" required>
+                                          <input type="text" name="name" value="" placeholder="Nombre" required>
                                       </div>
                                       <div class="form-group col-md-6 col-sm-6 co-xs-12">
                                           <input type="email" name="email" value="" placeholder="Email" required>
-                                      </div>
-                                      <div class="form-group col-md-6 col-sm-6 co-xs-12">
-                                          <input type="text" name="subject" value="" placeholder="Subject" required>
-                                      </div>
-                                      <div class="form-group col-md-6 col-sm-6 co-xs-12">
-                                          <input type="text" name="phone" value="" placeholder="Phone" required>
                                       </div>
                                       <div class="form-group col-md-12 col-sm-12 co-xs-12">
                                           <textarea name="message" placeholder="Massage"></textarea>
                                       </div>
                                       <div class="form-group col-md-12 col-sm-12 co-xs-12">
-                                          <button type="submit" class="theme-btn btn-style-one">Send Now</button>
+                                          <button type="submit" class="theme-btn btn-style-one">Envia</button>
                                       </div>
                                   </div>
                               </form>
@@ -92,20 +86,11 @@
                   <!--Info Column-->
                   <div class="info-column col-md-4 col-sm-12 col-xs-12">
                     <div class="inner-column">
-                        <h2>Contact Info</h2>
+                        <h2>Donde Contactarnos</h2>
                           <ul class="list-info">
-                            <li><i class="fas fa-globe"></i>123 lorem ispum Abc, Street Chandigarh.</li>
-                              <li><i class="far fa-envelope"></i>example@test</li>
+                            <li><i class="fas fa-globe"></i>Potosi 2057 Sagrado Corazon Al.Cal.</li>
+                              <li><i class="far fa-envelope"></i>SanAbiMaDa@Sagradoalcal.edu.ar</li>
                               <li><i class="fas fa-phone"></i>1-234-567-890 <br> 1-234-567-890</li>
-                          </ul>
-                          <ul class="social-icon-four">
-                              <li class="follow">Follow on: </li>
-                              <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-                              <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                              <li><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                              <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-                          </ul>
                       </div>
                   </div>
                   
