--- a/Productos/golosinas.html
+++ b/Productos/golosinas.html
@@ -9,15 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="js/jquery.dataTables.min.js"></script>
     <script src="js/jquery.js"></script>
+    <link rel="stylesheet" href="../css/fuentes.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
+
         <div class="dropdown">
             <button style="background: #397f3e;" class="btn" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
               <label  for=""> <i class="fas fa-bars filtro"></i></label>
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a style="color: #397f3e;" class="dropdown-item" href="../index.html">Inicio</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>
