boton carrito en bebidas

--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -32,7 +32,11 @@
             <div id="suggestion" class="hidden" ></div>
           </div>
 
-          <div><h1 style="color: #fcf9ed; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Productos</h1></div>
+
+
+          <a href="../carrito.html" class="btn"><button><i class="fa fa-cart-plus carrito" aria-hidden="true"></i>
+          </button></a>
+
     </header>
     
     <main>
