cartas en los productos

--- a/Productos/galletitas.html
+++ b/Productos/galletitas.html
@@ -22,7 +22,7 @@
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/galletitas.html">galletitas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/galletitas.html">Galletitas</a></li>
             </ul>
           </div>
   
@@ -38,7 +38,7 @@
     </header>
     
     <main>
-        <section class="product-container" id="miLista">
+        <section class="product-container carta " id="miLista">
            
         </section>
     </main>
