--- a/Productos/golosinas.html
+++ b/Productos/golosinas.html
@@ -40,7 +40,7 @@
     </header>
     
     <main>
-        <section class="product-container" id="miLista">
+        <section class="product-container carta " id="miLista">
            
         </section>
     </main>
