cartas en todas las paginas

--- a/Productos/snack.html
+++ b/Productos/snack.html
@@ -39,7 +39,7 @@
     </header>
     
     <main>
-        <section class="product-container carta" id="miLista">
+        <section class="product-container" id="miLista">
 
         </section>
     </main>
