--- a/carrito.html
+++ b/carrito.html
@@ -25,7 +25,7 @@
                 <!-- Los artículos del carrito se mostrarán aquí -->
             </ul>
             <p id="total">Total: $0.00</p>
-            <button id="clear-cart" style="background-color: #397f3e; border: none; border-radius: 20px; color: #fcf9ed; height: 30px;">Vaciar Carrito</button>
+            <button id="clear-cart">Vaciar Carrito</button>
         </section>
     </main>
 
