--- a/Productos/snack.html
+++ b/Productos/snack.html
@@ -22,8 +22,7 @@
                 <li><a style="color: #397f3e;" class="dropdown-item" href="../index.html">Inicio</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/galletitas.html">galletitas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/galletitas.html">Galletitas</a></li>
             </ul>
           </div>
   
