--- a/inicio_sesion2.html
+++ b/inicio_sesion2.html
@@ -24,7 +24,7 @@
 			<div class="login">
 				<form id="registerForm">
 					<label for="chk" aria-hidden="true">Crear Cuenta</label>
-					<input class="barraf" type="text" name="nombre" id="nombre" placeholder="Nombre de Usuario" required="">
+					<input class="barraf" type="text" name="nombre" id="nombre" placeholder="Nombre" required="">
 					<input class="barraf" type="email" name="email" id="correo" placeholder="Email" required="">
 					<input class="barraf" type="password" name="clave" id="contraseña" placeholder="Contraseña" required="">
 					<button type="button" onclick="crear_cuenta()" class="boton">Crear</button>
