--- a/Productos/golosinas.html
+++ b/Productos/golosinas.html
@@ -35,8 +35,8 @@
             <div id="suggestion" class="hidden" ></div>
           </div>
 
-          <div><h1 style="color: #fcf9ed; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">Productos</h1></div>
-    </header>
+          <a href="../carrito.html" class="btn"><button><i class="fa fa-cart-plus carrito" aria-hidden="true"></i>
+          </button></a>    </header>
     
     <main>
         <section class="product-container" id="miLista">
@@ -44,6 +44,8 @@
         </section>
     </main>
         <script src="../JS/golosinas.js"></script>
+
+        <button type="button" onclick="finalizar_carrito_g()">FINALIZAR CARRITO</button>
         <script>
           
 
