--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -47,6 +47,8 @@
         <section class="product-container" id="miLista">
            
         </section>
+
+        <button type="button" onclick="finalizar_carrito_b()">FINALIZAR CARRITO</button>
     </main>
  
         <!--
