--- a/Productos/galletitas.html
+++ b/Productos/galletitas.html
@@ -49,7 +49,7 @@
 
     </main>
 
-    <button type="button" onclick="finalizar_carrito_g()">FINALIZAR CARRITO</button>    <script>        
+    <button type="button" class="boton_carrito" onclick="finalizar_carrito_b()">FINALIZAR CARRITO</button>
        
         </script>
         <!--
