--- a/Productos/snack.html
+++ b/Productos/snack.html
@@ -45,7 +45,7 @@
     
         <script src="../JS/snacks.js"></script>
         
-        <button type="button" onclick="finalizar_carrito_s()">FINALIZAR CARRITO</button>
+        <button type="button" class="boton_carrito" onclick="finalizar_carrito_b()">FINALIZAR CARRITO</button>
 
 </body>
 </html>
