--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -48,7 +48,7 @@
            
         </section>
 
-        <button type="button" onclick="finalizar_carrito_b()">FINALIZAR CARRITO</button>
+        <button type="button" class="boton_carrito" onclick="finalizar_carrito_b()">FINALIZAR CARRITO</button>
     </main>
  
         <!--
