--- a/inicio_sesion2.html
+++ b/inicio_sesion2.html
@@ -27,6 +27,7 @@
 					<input class="barraf" type="text" name="nombre" id="nombre" placeholder="Nombre" required="">
 					<input class="barraf" type="email" name="email" id="correo" placeholder="Email" required="">
 					<input class="barraf" type="password" name="clave" id="contraseña" placeholder="Contraseña" required="">
+					<input class="barraf" type="text" name="clave" id="legajo" placeholder="Legajo" required="">
 					<button type="button" onclick="crear_cuenta()" class="boton">Crear</button>
 				</form>
 			</div>
