vaciar carrito finalizado

--- a/Productos/golosinas.html
+++ b/Productos/golosinas.html
@@ -45,7 +45,7 @@
     </main>
         <script src="../JS/golosinas.js"></script>
 
-        <button type="button" class="boton_carrito" onclick="finalizar_carrito_b()">FINALIZAR CARRITO</button>
+        <button type="button" class="boton_carrito" onclick="finalizar_carrito_g()">FINALIZAR CARRITO</button>
         <script>
           
 
