--- a/carrito.html
+++ b/carrito.html
@@ -25,7 +25,7 @@
                 <!-- Los artículos del carrito se mostrarán aquí -->
             </ul>
             <p id="total">Total: $0.00</p>
-            <button id="clear-cart">Vaciar Carrito</button>
+            <button id="clear-cart" onclick="vaciar_carrito()">Vaciar Carrito</button>
             <section class="product-container" id="miLista">
            
         </section>
@@ -34,6 +34,13 @@
 
     <script>
          carrito: Array();
+
+         function vaciar_carrito () {
+    localStorage.removeItem('carrito');
+    location.href="./"
+    //loadCart(); // Recargar el carrito vacío
+}
+
         window.addEventListener("load", ()=>{
             console.log("carrito")
            
@@ -62,39 +69,6 @@
     })
 
         })
-
-        // Función para cargar los productos desde el localStorage
-        function loadCart() {
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            const cartItems = document.getElementById('cart-items');
-            let total = 0;
-
-            // Limpiar los elementos actuales del carrito
-            cartItems.innerHTML = '';
-
-            // Agregar cada producto del carrito a la lista
-            cart.forEach(product => {
-                const li = document.createElement('li');
-                li.textContent = `${product.name} - $${product.price.toFixed(2)}`;
-                cartItems.appendChild(li);
-                total += product.price;
-            });
-
-            // Mostrar el total
-            document.getElementById('total').textContent = `Total: $${total.toFixed(2)}`;
-        }
-
-        // Vaciar el carrito
-        function clearCart() {
-            localStorage.removeItem('cart');
-            loadCart(); // Recargar el carrito vacío
-        }
-
-        // Cargar los productos al cargar la página
-        document.addEventListener('DOMContentLoaded', loadCart);
-
-        // Vaciar carrito al hacer clic en el botón
-        document.getElementById('clear-cart').addEventListener('click', clearCart);
     </script>
 </body>
 </html>
