--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div>
           <form action="">
-            <input  type="search" placeholder="BUSCAR">
+            <input type="text" id="searchInput" placeholder="Buscar snacks..." onkeyup="buscarSnack()">
             <button class="boton" type="submit"><i class="fa fa-search lupa"></i></button>
           </form>
         </div>
