boton del carrito

--- a/Productos/snack.html
+++ b/Productos/snack.html
@@ -29,7 +29,7 @@
   
         <div>
             <form action="">
-              <input type="text" id="searchInput" placeholder="Buscar snacks..." onkeyup="buscarSnack()">
+              <input type="text" placeholder="Buscar">
               <button class="boton" type="submit"><i class="fa fa-search lupa"></i></button>
             </form>
             <div id="suggestion" class="hidden" ></div>
