--- a/carrito.html
+++ b/carrito.html
@@ -25,7 +25,7 @@
                 <!-- Los artículos del carrito se mostrarán aquí -->
             </ul>
             <p id="total">Total: $0.00</p>
-            <button id="clear-cart" onclick="vaciar_carrito()">Vaciar Carrito</button>
+            <button class="btn_vaciar" id="clear-cart" onclick="vaciar_carrito()">Vaciar Carrito</button>
             <section class="product-container" id="miLista">
            
         </section>
