--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div>
           <form action="">
-            <input type="text" id="searchInput" placeholder="Buscar snacks..." onkeyup="buscarSnack()">
+            <input type="text" id="searchInput" placeholder="Buscar" >
             <button class="boton" type="submit"><i class="fa fa-search lupa"></i></button>
           </form>
         </div>
@@ -303,7 +303,7 @@
                 </div>
             </div>
         </div>
-        <script src="./JS/script.js"></script>
+        <script src="/JS/script.js"></script>
 <!-- footer -->
       <div class="footer-content">
     <div class="copyright-area">
