--- a/Productos/bebidas.html
+++ b/Productos/bebidas.html
@@ -37,7 +37,7 @@
 
 
 
-          <a href="../carrito.html" class="btn"><button><i class="fa fa-cart-plus carrito" aria-hidden="true"></i>
+          <a href="../carrito.html" class="btn"><button><i class="fa fa-cart-plus " aria-hidden="true"></i>
           </button></a>
 
     </header>
