--- a/Productos/galletitas.html
+++ b/Productos/galletitas.html
@@ -23,7 +23,7 @@
               <li><a style="color: #397f3e;" class="dropdown-item" href="../index.html">Inicio</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
               <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/snack.html">Snacks</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/galletitas.html">Galletitas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
             </ul>
           </div>
   
