--- a/Productos/snack.html
+++ b/Productos/snack.html
@@ -21,9 +21,10 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
               <li><a style="color: #397f3e;" class="dropdown-item" href="../index.html">Inicio</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/bebidas.html">Bebidas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/golosinas.html">Golosinas</a></li>
-              <li><a style="color: #397f3e;" class="dropdown-item" href="/Productos/galletitas.html">Galletitas</a></li>
+              <li class="li"><a style="color: #397f3e;" class="dropdown-item" href="./Productos/snack.html">Snacks</a></li>   
+              <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/golosinas.html">Golosinas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/bebidas.html">Bebidas</a></li>
+              <li><a style="color: #397f3e;" class="dropdown-item" href="./Productos/galletitas.html">Galletitas</a></li>
             </ul>
           </div>
   
