--- a/inicio_sesion2.html
+++ b/inicio_sesion2.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Inicio de Sesión</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="css/inicio_sesion2.css">
+	<link rel="stylesheet" href="./css/inicio_sesion2.css">
 	<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
